--- a/public/app.html
+++ b/public/app.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="./index-D6BhetW8.css" />
   </head>
   <body>
-    <div id="app"></div>
+    <h1>Fridge Chef</h1>
+    <div id="app">
+      <input type="text" placeholder="Enter ingredients" />
+      <button>Generate Recipe</button>
+      <div class="recipe" style="display: none;">Generated Recipe</div>
+    </div>
     <script type="module" src="./index-Cv3XDLXs.js"></script>
   </body>
 </html>
